internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-rewrite-url-prefix-with-weighted-backend.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /bar
                  name: second-route
                  route:
                    clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                    regexRewrite:
                      pattern:
                        regex: ^/bar\/*
                      substitution: /
                    upgradeConfigs:
                    - upgradeType: websocket
                    weightedClusters:
                      clusters:
                      - name: second-route-dest/backend/0
                        requestHeadersToAdd:
                        - header:
                            key: add-header-1
                            value: some-value
                        - header:
                            key: add-header-2
                            value: some-value
                        weight: 8
                      - name: second-route-dest/backend/1
                        weight: 2
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  name: first-route
                  route:
                    clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                    regexRewrite:
                      pattern:
                        regex: ^/foo\/*
                      substitution: /
                    upgradeConfigs:
                    - upgradeType: websocket
                    weightedClusters:
                      clusters:
                      - name: first-route-dest/backend/0
                        requestHeadersToAdd:
                        - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                          header:
                            key: add-header-3
                            value: some-value
                        weight: 1
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /bar/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /bar
                      name: second-route
                      route:
                        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                        regexRewrite:
                          pattern:
                            regex: ^/bar\/*
                          substitution: /
                        upgradeConfigs:
                        - upgradeType: websocket
                        weightedClusters:
                          clusters:
                          - name: second-route-dest/backend/0
                            requestHeadersToAdd:
                            - header:
                                key: add-header-1
                                value: some-value
                            - header:
                                key: add-header-2
                                value: some-value
                            weight: 8
                          - name: second-route-dest/backend/1
                            weight: 2
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      name: first-route
                      route:
                        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
                        regexRewrite:
                          pattern:
                            regex: ^/foo\/*
                          substitution: /
                        upgradeConfigs:
                        - upgradeType: websocket
                        weightedClusters:
                          clusters:
                          - name: first-route-dest/backend/0
                            requestHeadersToAdd:
                            - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                              header:
                                key: add-header-3
                                value: some-value
                            weight: 1
    name: first-listener/*
